[package]
name = "obnam"
version = "0.3.1"
authors = ["Lars Wirzenius <liw@liw.fi>"]
edition = "2018"
description = "a backup program"
license = "GPL-3.0-or-later"
homepage = "https://obnam.org/"
repository = "https://gitlab.com/larswirzenius/obnam"


[dependencies]
anyhow = "1"
bytes = "0.5"
bytesize = "1"
chrono = "0.4"
dirs = "3"
indicatif = "0.15"
libc = "0.2"
log = "0.4"
log4rs = "1"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"]}
rusqlite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
sha2 = "0.9"
structopt = "0.3"
tempfile = "3"
thiserror = "1"
tokio = { version = "0.2", features = ["macros"] }
users = "0.11"
uuid = { version = "0.8", features = ["v4"] }
walkdir = "2"
warp = { version = "0.2", features = ["tls"] }

[profile.release]
debug = true
