[package]
name = "obnam"
version ="0.7.0"
authors = ["Lars Wirzenius <liw@liw.fi>"]
edition = "2021"
description = "a backup program"
license = "AGPL-3.0-or-later"
homepage = "https://obnam.org/"
repository = "https://gitlab.com/larswirzenius/obnam"
rust-version = "1.56.0"


[dependencies]
aes-gcm = "0.9"
anyhow = "1"
bytesize = "1"
chrono = "0.4"
directories-next = "2"
futures = "0.3.15"
indicatif = "0.16"
libc = "0.2"
log = "0.4"
log4rs = "1"
pbkdf2 = "0.10"
pretty_env_logger = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"]}
rpassword = "5"
rusqlite = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
sha2 = "0.10"
spmc = "0.3.0"
structopt = "0.3"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
users = "0.11"
uuid = { version = "0.8", features = ["v4"] }
walkdir = "2"
warp = { version = "0.3", features = ["tls"] }

[profile.release]
debug = true
